# timbir-python

./: .gitignore  CMakeLists.txt  README  README_4D
3D_Recon_Launcher_for_Real_Data/: Bouman_Sub_File.sub  Carver_Sub_Launch_Folder.sh  Carver_Sub_Recon.sh  NERSC_Sub_Launch_Folder.sh  NERSC_Sub_Recon.sh  README.txt  SigmaXEstimation.cpp  Standby_Sub_File.sub  XT_Edge_Detection.py  XT_Experiment_Param.py  XT_FBP_Reconstruction.py  XT_IOMisc.py  XT_Initialize.py  XT_Initialize_v2.py  XT_Interlaced_Angles.py  XT_Interpolate.py  XT_MBIR_3D.py  XT_MBIR_Reconstruction.py  XT_Main.py  XT_ObjectHDFIO.py  XT_Projections.py
4D_Recon_Launcher_for_Real_Data/: Bouman_Sub_File.sub  Conte_RealData_Submit.sh  Conte_SimData_Submit.sh  Edison_RealData_Submit.sh  Extract_Slices_4m_Dataset.py  Hopper_RealData_Submit.sh  Multi_Node_Job.sub  NERSC_Sub_File.sh  NERSC_Sub_Launch_Folder.sh  NERSC_Sub_Recon.sh  NERSC_Sub_create_HDF.sh  PC_Launch.sh  Single_Node_Job.sub  Standby_Sub_File.sub  Sweep_Param.sh  XT_ArgParser.py  XT_Att_Tomo_Real.py  XT_Att_Tomo_Sim.py  XT_CompSys_Init.py  XT_Edge_Detection.py  XT_Experiment_Param.py  XT_Extract_Slices_4m_Dataset.py  XT_FBP_Reconstruction.m  XT_FBP_Reconstruction.py  XT_IOMisc.py  XT_Initialize.backup.py  XT_Initialize.high_res.py  XT_Initialize.py  XT_Initialize_3D.py  XT_Interlaced_Angles.py  XT_Interpolate.py  XT_MBIR_Reconstruction.py  XT_Main.py  XT_ObjectHDFIO.py  XT_PhCon_Tomo_Real.py  XT_PhCon_Tomo_Sim.py  XT_Projections.py  bitreversed_decimal.m  gen_interlaced_views_0_to_inf.m  info.txt  (+9 more)
Bin2Tiff32bit/: Bin2Tiff  Bin2Tiff.py  Bin2Tiff.x  README.txt  SeparateBin2Tiff.py  grid_readwrite.cpp  grid_readwrite.h  main.cpp
Dataset_Extract_Slices/: Extract_Slices.sh  XT_Extract_Slices.c  XT_Extract_Slices_4m_Dataset.py  XT_SubViews_ExtractSlices_4m_Dataset.py  compile_run.sh
Source_Code_3D/: Makefile  Weight  XT_AMatrix.c  XT_Engine.c  XT_ICD_update.c  XT_ICD_update.h  XT_IOMisc.c  XT_ImageProc.h  XT_Init.c  XT_Init.h  XT_MPI.h  XT_NHICD.c  XT_NHICD.h  XT_Profile.c  XT_Profile.h  XT_Structures.h  XT_genSinogram.c  XT_genSinogram.h
Source_Code_4D/: .XT_ImageProc.c.swp  N_t  README  README.txt  XT_AMatrix.c  XT_AMatrix.h  XT_Constants.h  XT_Engine  XT_Engine.c  XT_ForwardProject.c  XT_ForwardProject.h  XT_HDFIO.c  XT_HDFIO.h  XT_ICD_update.backup.c  XT_ICD_update.c  XT_ICD_update.change.c  XT_ICD_update.h  XT_IOMisc.c  XT_IOMisc.h  XT_ImageProc.c  XT_Init.c  XT_MPI.c  XT_NHICD.c  XT_Profile.c  XT_Profile.h  XT_Structures.h  XT_VoxUpdate.c  XT_VoxUpdate.h  XT_genSinogram.c  allocate.c  allocate.h  compile.sh  compile_nersc.sh  compile_purdue.sh  info.txt  proj_offset_d1_0_d2_0.tif
Source_Code_4D/XT_Engine.dSYM/Contents/: Info.plist
Source_Code_4D/XT_Engine.dSYM/Contents/Resources/DWARF/: XT_Engine
Source_Code_4D_APS2014/: .XT_MPI.c.swp  CMakeLists.txt  TiffUtilities.cpp  XT_AMatrix.c  XT_AMatrix.h  XT_Engine  XT_Engine.h  XT_Filter.h  XT_ForwardProject.h  XT_HDFIO.c  XT_ICD_update.change.c  XT_ImageProc.c  XT_Init.c  XT_MPI.c  XT_NHICD.h  XT_Profile.c  XT_Structures.h  XT_VoxUpdate.c  XT_VoxUpdate.h  XT_genSinogram.c  compile_edison.sh  compile_nersc.sh  compile_purdue.sh  info.txt  view_info.txt  ~
Source_Code_4D_Fast/: .XT_ICD_update.c.swp  XTEngineConfiguration.h.in  XT_Constants.h  XT_Engine  XT_Engine.c  XT_Filter.c  XT_ForwardProject.c  XT_ForwardProject.h  XT_HDFIO.c  XT_HDFIO.h  XT_ICD_update.backup.c  XT_ICD_update.c  XT_IOMisc.c  XT_IOMisc.h  XT_ImageProc.h  XT_Init.c  XT_Init.edit.c  XT_MPI.c  XT_MPI.edit.c  XT_Structures.h  XT_VoxUpdate.c  XT_VoxUpdate.h  XT_genSinogram.c  compile_purdue.sh  run.sh
Source_Code_4D_Wang/: CMakeLists.txt  Makefile  TiffUtilities.cpp  TiffUtilities.h  TiffWrite.h  Weight  XTEngineConfiguration.h.in  XT_AMatrix.c  XT_AMatrix.h  XT_Constants.h  XT_Engine  XT_Engine.c  XT_Engine.h  XT_Filter.c  XT_Filter.h  XT_ForwardProject.c  XT_ForwardProject.h  XT_HDFIO.c  XT_HDFIO.h  XT_ICD_update.c  XT_ICD_update.h  XT_IOMisc.c  XT_IOMisc.h  XT_ImageProc.c  XT_ImageProc.h  XT_Init.c  XT_Init.h  XT_MPI.c  XT_MPI.h  XT_NHICD.c  XT_NHICD.h  XT_Profile.c  XT_Profile.h  XT_Structures.h  XT_VoxUpdate.c  XT_VoxUpdate.h  XT_genSinogram.c  XT_genSinogram.h  allocate.c  allocate.h  (+9 more)
Support/cmp/: cmpCMakeMacros.cmake
